# escrowly

./: index.html
.github/workflows/: deploy.yml
assets/: index-BO4v9MGU.js  index-CeQioKIw.css  index-Dpde6F1G.css  index-DxSVdn3h.js
backend/auth-api/: README.md  package-lock.json  package.json
backend/auth-api/data/: auth-db.json
backend/auth-api/src/: auth.js  constants.js  env.js  mailer.js  middleware.js  oauth.js  paths.js  server.js  store.js
backend/solana-program/: Anchor.toml  README.md  package.json
backend/solana-program/migrations/: deploy.ts
backend/solana-program/programs/escrowly_program/: Cargo.toml
backend/solana-program/programs/escrowly_program/src/: lib.rs
backend/solana-program/tests/: escrowly.ts
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: styles.css
frontend/src/app/: App.jsx
frontend/src/auth/: AuthDashboard.jsx  api.js
frontend/src/components/: PageTransition.jsx  SmoothScroll.jsx
frontend/src/components/cursor/: AnimatedCursor.jsx
frontend/src/components/layout/: AppShell.jsx
frontend/src/components/ui/: Card.jsx  Field.jsx  IconButton.jsx  LottieAnimation.jsx  PrimaryButton.jsx  SecondaryButton.jsx  Toast.jsx  button.jsx  (+1 more)
frontend/src/dashboard/: AdminDashboard.jsx  BuyerDashboard.jsx  DealDetail.jsx  DealRow.jsx  Stat.jsx
frontend/src/landing/: ContractTerminal.jsx  FloatingAccent.jsx  HeroScene.jsx  LandingFooter.jsx  LandingNav.jsx  LandingPage.jsx  LogoMark.jsx  images.js
frontend/src/lib/: escrow.js  format.js  solanaEscrowProgram.js  utils.js
