[package]
name = "escrowly_program"
version = "0.1.0"
description = "Escrowly Solana escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrowly_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
